--- a/pdfGenService/package.json
+++ b/pdfGenService/package.json
@@ -4,8 +4,8 @@
   "description": "a pdfGeneration Service",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon lib/app.js --exec babel-node",
-    "build": "babel lib -d dist",
+    "start": "nodemon src/app.js --exec babel-node",
+    "build": "babel src -d dist",
     "serve": "node dist/app.js",
     "test": "mocha --require babel-register"
   },
