--- a/reportDesigner/package.json
+++ b/reportDesigner/package.json
@@ -4,7 +4,8 @@
   "description": "simple and lightweight report designer tool",
   "main": "index.js",
   "scripts": {
-    "start": "parcel src/index.html"
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html"
   },
   "author": "jmanuelcorral",
   "license": "MIT",
