--- a/pdfGenService/dockerfile
+++ b/pdfGenService/dockerfile
@@ -3,8 +3,8 @@ FROM node:9.8-alpine
 ADD . /usr/src/app
 WORKDIR /usr/src/app
 RUN npm install
-ENV PORT 80
-ENV NODE_ENV DEV
-EXPOSE 80
+#ENV PORT 80
+#ENV NODE_ENV DEV
+#EXPOSE 80
 
-CMD ["npm", "run", "start"]
+#CMD ["npm", "run", "start"]
