--- a/pdfGenService/dockerfile
+++ b/pdfGenService/dockerfile
@@ -1,10 +1,33 @@
+# if you're doing anything beyond your local machine, please pin this to a specific version at https://hub.docker.com/_/node/
 FROM node:9.8-alpine 
 
-ADD . /usr/src/app
-WORKDIR /usr/src/app
-RUN npm install
-#ENV PORT 80
-#ENV NODE_ENV DEV
-#EXPOSE 80
+RUN mkdir -p /opt/app
 
-#CMD ["npm", "run", "start"]
+# set our node environment, either development or production
+# defaults to production, compose overrides this to development on build and run
+ARG NODE_ENV=production
+ENV NODE_ENV $NODE_ENV
+
+# default to port 80 for node, and 5858 or 9229 for debug
+ARG PORT=80
+ENV PORT $PORT
+EXPOSE $PORT 5858 9229
+
+# check every 30s to ensure this service returns HTTP 200
+
+HEALTHCHECK --interval=30s CMD node healthcheck.js
+# install dependencies first, in a different location for easier app bind mounting for local development
+WORKDIR /opt
+COPY package.json package-lock.json* ./
+RUN npm install && npm cache clean --force
+ENV PATH /opt/node_modules/.bin:$PATH
+
+# copy in our source code last, as it changes the most
+WORKDIR /opt/app
+COPY . /opt/app
+
+# if you want to use npm start instead, then use `docker run --init in production`
+# so that signals are passed properly. Note the code in index.js is needed to catch Docker signals
+# using node here is still more graceful stopping then npm with --init afaik
+# I still can't come up with a good production way to run with npm and graceful shutdown
+CMD [ "npm", "run start" ]
