--- a/pdfGenService/package.json
+++ b/pdfGenService/package.json
@@ -4,7 +4,7 @@
   "description": "a pdfGeneration Service",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon src/app.js --exec babel-node",
+    "start": "nodemon --legacy-watch src/app.js --exec babel-node",
     "build": "babel src -d dist",
     "serve": "node dist/app.js",
     "test": "mocha --require babel-register"
