--- a/reportDesigner/package.json
+++ b/reportDesigner/package.json
@@ -10,12 +10,13 @@
   "author": "jmanuelcorral",
   "license": "MIT",
   "dependencies": {
-    "vue": "^2.5.16"
+    "vue": "^2.5.16",
+    "vue-hot-reload-api": "^2.3.3"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "parcel-bundler": "^1.6.2",
-    "parcel-plugin-vue": "^1.5.0"
+    "@vue/component-compiler-utils": "^3.0.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "vue-template-compiler": "^2.6.10"
   }
 }
